--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+dls-edm = {editable = true, extras = ["dev"], path = "."}
 
 [packages]
+dls-edm = {editable = true, path = "."}
 
 [requires]
 python_version = "3.7"
