--- a/setup.cfg
+++ b/setup.cfg
@@ -2,16 +2,56 @@
 name = dls_edm
 version = file: dls_edm/VERSION
 description = dls_edm
+classifiers =
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
  
 [options]
 packages = dls_edm
 include_package_data = False
+install_requires =
+    sphinx-rtd-theme
+
+[options.extras_require]
+dev =
+    pytest
+    pytest-mypy
+    pytest-flake8
+    pytest-black
+    mypy
+    types-pyyaml
+    types-mock >=4.0
+    isort >5.0
+    flake8
+    flake8-isort
+    black ==19.10b0
+    typing-extensions
+    importlib-metadata
+    pydocstyle
  
 [options.package_data]
 dls_edm = VERSION
+
+[options.packages.find]
+# Don't include our tests directory in the distribution
+exclude = tests
  
 [options.entry_points]
 console_scripts = dls-edm-resize.py = dls_edm.resize:cl_resize
                   dls-edm-titlebar.py = dls_edm.titlebar:cl_titlebar
                   dls-edm-substitute-embed.py = dls_edm.substitute_embed:cl_substitute_embed
                   dls-edm-flip-horizontal.py = dls_edm.flip_horizontal:cl_flip_horizontal
+
+[isort]
+profile=black
+float_to_top=true
+skip=setup.py,conf.py,build
+
+[flake8]
+# Make flake8 respect black's line length (default 88),
+max-line-length = 88
+extend-ignore =
+    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
+    F811, # support typing.overload decorator
+    F722, # allow Annotated[typ, some_func("some string")]
