Pin version of dls_dependency_tree to be >=3.1.4 as that is the working Python3 version

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ classifiers =
 packages = dls_edm
 include_package_data = False
 install_requires =
+    dls_dependency_tree>=3.1.4
     sphinx-rtd-theme
 
 [options.extras_require]
