--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ dev =
  
 [options.package_data]
 dls_edm = VERSION
+* = *.pkl
 
 [options.packages.find]
 # Don't include our tests directory in the distribution
