Updated setup.cfg and setup.py; Moved package scripts into src/

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,21 @@
 [metadata]
 name = dls_edm
-version = file: dls_edm/VERSION
 description = dls_edm
 classifiers =
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
  
 [options]
-packages = dls_edm
+packages = find:
+# =src is interpreted as {"": "src"}
+# as per recommendation here https://hynek.me/articles/testing-packaging/
+package_dir =
+    =src
+
 include_package_data = False
 install_requires =
     dls_dependency_tree>=3.1.4
     sphinx-rtd-theme
+    dill
 
 [options.extras_require]
 dev =
@@ -31,19 +34,24 @@ dev =
     importlib-metadata
     pydocstyle
  
-[options.package_data]
-dls_edm = VERSION
-* = *.pkl
+# [options.package_data]
+# dls_edm = VERSION
+# * = *.pkl
 
 [options.packages.find]
+where = src
 # Don't include our tests directory in the distribution
 exclude = tests
  
 [options.entry_points]
-console_scripts = dls-edm-resize.py = dls_edm.resize:cl_resize
-                  dls-edm-titlebar.py = dls_edm.titlebar:cl_titlebar
-                  dls-edm-substitute-embed.py = dls_edm.substitute_embed:cl_substitute_embed
-                  dls-edm-flip-horizontal.py = dls_edm.flip_horizontal:cl_flip_horizontal
+console_scripts = dls-edm-resize = dls_edm.resize:cl_resize
+                  dls-edm-titlebar = dls_edm.titlebar:cl_titlebar
+                  dls-edm-substitute-embed = dls_edm.substitute_embed:cl_substitute_embed
+                  dls-edm-flip-horizontal = dls_edm.flip_horizontal:cl_flip_horizontal
+
+[mypy]
+# Ignore missing stubs for modules we use
+ignore_missing_imports = True
 
 [isort]
 profile=black
