--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,9 @@ packages = find:
 package_dir =
     =src
 
-include_package_data = False
+# include_package_data = False
 install_requires =
-    dls_dependency_tree>=3.1.4
+    dls_dependency_tree>=3.1.5
     sphinx-rtd-theme
     dill
 
@@ -34,9 +34,10 @@ dev =
     importlib-metadata
     pydocstyle
  
-# [options.package_data]
+[options.package_data]
 # dls_edm = VERSION
 # * = *.pkl
+* = act_save.cc
 
 [options.packages.find]
 where = src
