--- a/.github/workflows/_container.yml
+++ b/.github/workflows/_container.yml
@@ -1,9 +1,5 @@
 on:
   workflow_call:
-    inputs:
-      publish:
-        type: boolean
-        description: If true, pushes image to container registry
 
 jobs:
   build:
@@ -51,7 +47,7 @@ jobs:
             type=raw,value=latest
 
       - name: Push cached image to container registry
-        if: inputs.publish && github.ref_type == 'tag'
+        if: github.ref_type == 'tag'
         uses: docker/build-push-action@v6
         env:
           DOCKER_BUILD_RECORD_UPLOAD: false
