--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,17 +18,20 @@ license.file = "LICENSE"
 readme = "README.md"
 requires-python = ">=3.11"
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
+    "build",
     "copier",
     "pipdeptree",
     "pre-commit",
     "pyright",
-    "pytest",
+    "pytest>8.3.4",
     "pytest-cov",
     "ruff",
-    "tox-direct",
+    "tox-uv",
+    "twine",
     "types-mock",
+    "uv~=0.7.0",
 ]
 
 [project.scripts]
@@ -41,13 +44,12 @@ GitHub = "https://github.com/DiamondLightSource/dls-edm"
 email = "oliver.copping@diamond.ac.uk"
 name = "Oliver Copping"
 
-
 [tool.setuptools_scm]
 version_file = "src/dls_edm/_version.py"
 
 [tool.pyright]
 typeCheckingMode = "standard"
-reportMissingImports = false # Ignore missing stubs in imported modules
+reportMissingImports = false  # Ignore missing stubs in imported modules
 
 [tool.pytest.ini_options]
 # Run pytest with all our checkers, and don't spam us with massive tracebacks on error
@@ -66,26 +68,64 @@ data_file = "/tmp/dls_edm.coverage"
 # Tests are run from installed location, map back to the src directory
 source = ["src", "**/site-packages/"]
 
-# tox must currently be configured via an embedded ini string
-# See: https://github.com/tox-dev/tox/issues/999
 [tool.tox]
-legacy_tox_ini = """
-[tox]
-skipsdist=True
+skipsdist = true
+requires = ["tox-uv>=1.25.0"]
+# envs to runs automatically with tox -p
+env_list = ["pre-commit", "type-checking", "tests"] # "docs" ]
 
-[testenv:{pre-commit,type-checking,tests}]
-# Don't create a virtualenv for the command, requires tox-direct plugin
-direct = True
-passenv = *
-allowlist_externals =
-    pytest
-    pre-commit
-    pyright
-commands =
-    pre-commit: pre-commit run --all-files --show-diff-on-failure {posargs}
-    type-checking: pyright src tests {posargs}
-    tests: pytest --cov=dls_edm --cov-report term --cov-report xml:cov.xml {posargs}
-"""
+[tool.tox.env]
+# Include setuptools, pip, ... in the tox envs
+uv_seed = { enabled = true }
+
+[tool.tox.env.pre-commit]
+description = "Run pre-commit"
+allowlist_externals = ["pre-commit"]
+passenv = ["*"]
+commands = [
+    [
+        "pre-commit",
+        "run",
+        #"--all-files",
+        "--show-diff-on-failure",
+        { replace = "posargs", default = [], extend = true },
+    ],
+]
+
+[tool.tox.env.type-checking]
+description = "Run type-checking"
+allowlist_externals = ["pyright"]
+passenv = ["*"]
+# needed otherwise throws reportUnknownMemberType errors
+deps = ["pytest"]
+commands = [
+    [
+        "pyright",
+        "src",
+        "tests",
+        { replace = "posargs", default = [
+        ], extend = true },
+    ],
+]
+
+[tool.tox.env.tests]
+description = "Run tests"
+allowlist_externals = ["pytest"]
+passenv = ["*"]
+commands = [
+    [
+        "pytest",
+        "-vv",
+        "--cov=dls_edm",
+        "--cov-report",
+        "term",
+        "--cov-report",
+        "xml:cov.xml",
+        { replace = "posargs", default = [
+        ], extend = true },
+    ],
+]
+
 
 [tool.ruff]
 src = ["src", "tests"]
