--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier
-_commit: 3.0.0-3-gd05f036
+_commit: 4.1.0
 _src_path: gh:DiamondLightSource/python-copier-template
 author_email: oliver.copping@diamond.ac.uk
 author_name: Oliver Copping
@@ -9,6 +9,7 @@ component_type: library
 description: DLS package for building Beamline GUIs
 distribution_name: dls-edm
 docker: true
+docker_debug: false
 docs_type: README
 git_platform: github.com
 github_org: DiamondLightSource
