--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,30 +12,33 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
 ]
 description = "DLS package for building Beamline GUIs"
-dependencies = [] # Add project dependencies here, e.g. ["click", "numpy"]
+dependencies = ["dls_dependency_tree>=3.1.5", "sphinx-rtd-theme", "dill"]
 dynamic = ["version"]
 license.file = "LICENSE"
 readme = "README.md"
 requires-python = ">=3.11"
 
-[dependency-groups]
+[project.optional-dependencies]
 dev = [
-    "build",
     "copier",
+    "importlib-metadata",
     "pipdeptree",
     "pre-commit",
     "pyright",
-    "pytest>8.3.4",
+    "pytest",
     "pytest-cov",
     "ruff",
-    "tox-uv",
-    "twine",
+    "tox",
+    "tox-direct",
     "types-mock",
-    "uv~=0.7.0",
+    "types-pyyaml",
 ]
 
 [project.scripts]
-dls-edm = "dls_edm.__main__:main"
+dls-edm-resize = "dls_edm.resize:cl_resize"
+dls-edm-titlebar = "dls_edm.titlebar:cl_titlebar"
+dls-edm-substitute-embed = "dls_edm.substitute_embed:cl_substitute_embed"
+dls-edm-flip-horizontal = "dls_edm.flip_horizontal:cl_flip_horizontal"
 
 [project.urls]
 GitHub = "https://github.com/DiamondLightSource/dls-edm"
@@ -43,6 +46,7 @@ GitHub = "https://github.com/DiamondLightSource/dls-edm"
 [[project.authors]] # Further authors may be added by duplicating this section
 email = "oliver.copping@diamond.ac.uk"
 name = "Oliver Copping"
+
 
 [tool.setuptools_scm]
 version_file = "src/dls_edm/_version.py"
@@ -68,6 +72,8 @@ data_file = "/tmp/dls_edm.coverage"
 # Tests are run from installed location, map back to the src directory
 source = ["src", "**/site-packages/"]
 
+# tox must currently be configured via an embedded ini string
+# See: https://github.com/tox-dev/tox/issues/999
 [tool.tox]
 skipsdist = true
 requires = ["tox-uv>=1.25.0"]
