--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,20 +18,21 @@ license.file = "LICENSE"
 readme = "README.md"
 requires-python = ">=3.11"
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
+    "build",
     "copier",
     "importlib-metadata",
     "pipdeptree",
     "pre-commit",
     "pyright",
-    "pytest",
+    "pytest>8.3.4",
     "pytest-cov",
     "ruff",
-    "tox",
-    "tox-direct",
+    "tox-uv",
+    "twine",
     "types-mock",
-    "types-pyyaml",
+    "uv~=0.7.0",
 ]
 
 [project.scripts]
@@ -46,7 +47,6 @@ GitHub = "https://github.com/DiamondLightSource/dls-edm"
 [[project.authors]] # Further authors may be added by duplicating this section
 email = "oliver.copping@diamond.ac.uk"
 name = "Oliver Copping"
-
 
 [tool.setuptools_scm]
 version_file = "src/dls_edm/_version.py"
@@ -72,8 +72,6 @@ data_file = "/tmp/dls_edm.coverage"
 # Tests are run from installed location, map back to the src directory
 source = ["src", "**/site-packages/"]
 
-# tox must currently be configured via an embedded ini string
-# See: https://github.com/tox-dev/tox/issues/999
 [tool.tox]
 skipsdist = true
 requires = ["tox-uv>=1.25.0"]
@@ -87,7 +85,6 @@ uv_seed = { enabled = true }
 [tool.tox.env.pre-commit]
 description = "Run pre-commit"
 allowlist_externals = ["pre-commit"]
-passenv = ["*"]
 commands = [
     [
         "pre-commit",
@@ -101,7 +98,6 @@ commands = [
 [tool.tox.env.type-checking]
 description = "Run type-checking"
 allowlist_externals = ["pyright"]
-passenv = ["*"]
 # needed otherwise throws reportUnknownMemberType errors
 deps = ["pytest"]
 commands = [
@@ -117,7 +113,6 @@ commands = [
 [tool.tox.env.tests]
 description = "Run tests"
 allowlist_externals = ["pytest"]
-passenv = ["*"]
 commands = [
     [
         "pytest",
